# paper_voice

./: .buildinfo  .flake8  .gitignore  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  test_simple_enhancer.py
.doctrees/: environment.pickle  index.doctree
.github/workflows/: ci.yml  docs.yml  main.yml  release.yml  test.yml
.streamlit/: config.toml
_modules/: index.html
_modules/paper_voice/: content_processor.html  latex_processor.html  pdf_utils.html  selective_enhancer.html  simple_llm_enhancer.html  tts.html
demos/: example_processing.py  live_demo.py  real_demo_your_text.py
docs/: index.rst
examples/: enhanced_usage.py
paper_voice/: latex_processor.py  llm_math_explainer.py  selective_enhancer.py  simple_llm_enhancer.py  tts.py
paper_voice/streamlit/: app_enhanced.py
streamlit/: app.py  app_old.py  app_with_llm.py  requirements.txt
tests/: test_tts_chunking.py
